Add des and serialization methods for segwit compatible fed. Rename constant