@@ -312,7 +312,7 @@ public class BridgeSerializationUtils {
         List<byte[]> federationMembers = federation.getMembers().stream()
             .sorted(FederationMember.BTC_RSK_MST_PUBKEYS_COMPARATOR)
             .map(member -> RLP.encodeElement(federationMemberSerializer.serialize(member)))
-            .collect(Collectors.toList());
+            .toList();
 
         byte[][] rlpElements = new byte[FEDERATION_RLP_LIST_SIZE][];
         rlpElements[FEDERATION_CREATION_TIME_INDEX] = RLP.encodeBigInteger(BigInteger.valueOf(federation.getCreationTime().toEpochMilli()));
@@ -342,7 +342,7 @@ public class BridgeSerializationUtils {
 
         RLPList rlpMembers = (RLPList) rlpList.get(FEDERATION_MEMBERS_INDEX);
 
-        List<FederationMember> federationMembers = new ArrayList();
+        List<FederationMember> federationMembers = new ArrayList<>();
 
         for (int k = 0; k < rlpMembers.size(); k++) {
             RLPElement element = rlpMembers.get(k);
@@ -408,6 +408,12 @@ public class BridgeSerializationUtils {
                 federationConstants
             );
         }
+        if (version == P2SH_P2WSH_ERP_FEDERATION.getFormatVersion()) {
+            return BridgeSerializationUtils.deserializeP2shP2wshErpFederation(
+                data,
+                federationConstants
+            );
+        }
         // To keep backwards compatibility
         return BridgeSerializationUtils.deserializeStandardMultisigFederation(
             data,
@@ -416,7 +422,7 @@ public class BridgeSerializationUtils {
     }
 
     // For the serialization format, see BridgeSerializationUtils::serializeFederation
-    public static StandardMultisigFederation deserializeStandardMultisigFederation(
+    protected static StandardMultisigFederation deserializeStandardMultisigFederation(
         byte[] data,
         NetworkParameters networkParameters
     ) {
@@ -426,7 +432,8 @@ public class BridgeSerializationUtils {
             FederationMember::deserialize
         );
     }
-    public static ErpFederation deserializeNonStandardErpFederation(
+
+    protected static ErpFederation deserializeNonStandardErpFederation(
         byte[] data,
         FederationConstants federationConstants,
         ActivationConfig.ForBlock activations
@@ -444,7 +451,7 @@ public class BridgeSerializationUtils {
         return FederationFactory.buildNonStandardErpFederation(federationArgs, erpPubKeys, activationDelay, activations);
     }
 
-    public static ErpFederation deserializeP2shErpFederation(
+    protected static ErpFederation deserializeP2shErpFederation(
         byte[] data,
         FederationConstants federationConstants
     ) {
@@ -459,6 +466,23 @@ public class BridgeSerializationUtils {
         long activationDelay = federationConstants.getErpFedActivationDelay();
 
         return FederationFactory.buildP2shErpFederation(federationArgs, erpPubKeys, activationDelay);
+    }
+
+    protected static ErpFederation deserializeP2shP2wshErpFederation(
+        byte[] data,
+        FederationConstants federationConstants
+    ) {
+        Federation federation = deserializeStandardMultisigFederationWithDeserializer(
+            data,
+            federationConstants.getBtcParams(),
+            FederationMember::deserialize
+        );
+
+        FederationArgs federationArgs = federation.getArgs();
+        List<BtcECKey> erpPubKeys = federationConstants.getErpFedPubKeysList();
+        long activationDelay = federationConstants.getErpFedActivationDelay();
+
+        return FederationFactory.buildP2shP2wshErpFederation(federationArgs, erpPubKeys, activationDelay);
     }
 
     // An ABI call election is serialized as a list of the votes, like so:
@@ -883,7 +907,7 @@ public class BridgeSerializationUtils {
     // arg_1, ..., arg_n
     private static byte[] serializeABICallSpec(ABICallSpec spec) {
         byte[][] encodedArguments = Arrays.stream(spec.getArguments())
-                .map(arg -> RLP.encodeElement(arg))
+                .map(RLP::encodeElement)
                 .toArray(byte[][]::new);
         return RLP.encodeList(
                 RLP.encodeElement(spec.getFunction().getBytes(StandardCharsets.UTF_8)),
@@ -917,7 +941,7 @@ public class BridgeSerializationUtils {
         List<byte[]> encodedKeys = voters.stream()
                 .sorted(RskAddress.LEXICOGRAPHICAL_COMPARATOR)
                 .map(key -> RLP.encodeElement(key.getBytes()))
-                .collect(Collectors.toList());
+                .toList();
         return RLP.encodeList(encodedKeys.toArray(new byte[0][]));
     }
 
